--- a/package.json
+++ b/package.json
@@ -6,24 +6,37 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.29.2",
     "framer-motion": "^11.1.5",
     "next": "14.2.2",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
     "use-debounce": "^10.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "29.5.11",
+    "@types/jest-json-schema": "^6.1.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-json-schema": "^6.1.0",
+    "jest-mock-extended": "^3.0.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
